--- a/templates/template-product.html
+++ b/templates/template-product.html
@@ -271,7 +271,7 @@
 
       <figure class="product">
         <div class="product__organic {%NOT_ORGANIC%}"><h5>Organic</h5></div>
-        <a href="#" class="product__back">
+        <a href="/overview" class="product__back">
           <span class="emoji-left">👈</span>Back
         </a>
         <div class="product__hero">
@@ -290,7 +290,7 @@
           <p><span class="emoji-left">🌍</span>From {%FROM%}</p>
           <p><span class="emoji-left">❤️</span>{%NUTRIENT%}</p>
           <p><span class="emoji-left">📦</span> {%QUANTITY%}</p>
-          <p><span class="emoji-left">🏷</span>{%PRICE%}</p>
+          <p><span class="emoji-left">🏷</span>{%PRICE%}₹</p>
         </div>
   
         <a href="#" class="product__link">
